--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,10 @@
 </head>
 <body>
 <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+<script>
+	Kakao.init('c3f66e6f7b234d8f93a5036f059627ea');
+	console.log(Kakao.isInitialized());
+</script>
 <div id="root"></div>
 </body>
 </html>
